# nyrLang

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  codecov.yml  conftest.py  main.py  pyproject.toml  requirements-dev.txt  setup.cfg  tox.ini
.github/workflows/: codecov.yml  pytest.yml  tox.yml
Nyr/: Node.py  Parser.py  Tokenizer.py  __main__.py  main.py
Nyr.Test/: test_Env.py  test_Examples.py  test_Parser.py  test_StatementList.py  test_Tokenizer.py
Nyr.Test/testStatement/: test_Block.py
Nyr.Test/test_Interpreter/: test_BinaryExpressions.py
Nyr.Test/tests_Interpreter/: test_BinaryExpressions.py  test_FunctionCalls.py  test_Functions.py  test_Interpreter.py  test_Logic.py  test_Loops.py  test_UnaryExpressions.py  test_Variables.py
Nyr.Test/tests_Parser/: test_ClassDeclaration.py  test_Comments.py  test_Exceptions.py  test_FunctionDeclaration.py  test_Functions.py  test_Parser.py
Nyr/Bytecode Interpreter/: .gitignore  README.md  chunk.h  common.h  compiler.c  debug.c  debug.h  main.c  memory.c  scanner.c  scanner.h  table.c  value.c  value.h  vm.c
Nyr/Interpreter/: Env.py  Interpreter.py  Stack.py
Nyr/Parser/: Node.py  Parser.py  Tokenizer.py
_nyr/: __main__.py
_nyr/Bytecode Interpreter/: Makefile  chunk.h  common.h  debug.c  table.h  value.c
_nyr/interpreter/: stack.py
_nyr/parser/: parser.py
examples/: Factorial.nyr  Fibonacci.nyr  Functions.nyr  Variables.nyr  functions.nyr  variables.nyr
nyr/: __init__.py  __main__.py
nyr/v2/: notes.md  (+5 more)
tests/: conftest.py  test_Examples.py  test_Tokenizer.py
(+70 files in other folders)
