[build-system]
requires = [ "setuptools >= 35.0.2", "wheel >= 0.29.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
console_output_style = "progress"
log_auto_indent = true
minversion = 6.0
addopts = "--strict-config --strict-markers"
xfail_strict = true

[tool.coverage.run]
cover_pylib = false
branch = true
include = [
	"nyr/*",
	"tests/*",
	"nyr/Bytecode Interpreter/",
]
omit = [
	"nyr/__main__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 3
include = [
	"nyr/*",
	"tests/*",
]
omit = [
	"nyr/__main__.py",
	"nyr/Interpreter/Stack.py",
	"nyr/Bytecode Interpreter/",
]

[tool.coverage.html]
directory = "reports/coverage/htmlreport"
skip_covered = false

[tool.coverage.xml]
output = "reports/coverage/coverage.xml"
