[metadata]
name = nyr
version = 0.1.2
url = https://github.com/nyrLang/nyrLang
author = Tom Knust
author_email = niyrme@gmail.com
license = MIT
license_file = LICENSE
classifiers =
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Topic :: Software Development :: Interpreters

[options]
packages = find:
python_requires = >= 3.9

[options.entry_points]
console_scripts =
	nyr=nyr:main

[options.packages.find]
exclude =
	tests*
